# glossary-api

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.Docker.md  README.md  alembic.ini  compose.yaml  docker-compose.neo4j.yml  docker-compose.yaml  pyproject.toml  tasks.py
.github/DISCUSSION_TEMPLATE/: vocabulary-suggestion.yml
.github/workflows/: python-deploy.yml  python-test.yml
alembic/: README.md  env.py
alembic/versions/: 5233d5762475_update_alt_labels_to_list.py  658cfadcf600_initial_migration.py
dds_glossary/: __init__.py  auth.py  controllers.py  core.py  database.py  enums.py  errors.py  exceptions.py  main.py  model.py  neo.py  routes.py  schema.py  services.py  settings.py  utils.py  xml.py
schema/: Concept.slot_jsonschema.json  ConceptSchema.slot_jsonschema.json  Entity.slot_jsonschema.json  Process.slot_jsonschema.json  Product.slot_jsonschema.json
templates/: home.html
tests/: __init__.py  common.py  conftest.py  test_core.py  test_model.py  test_utils.py
tests/data/: sample.rdf
tests/integration/: __init__.py  test_api_cycle.py  test_fresh_start.py  test_pipelines.py  utils.py
tests/unit/: __init__.py  test_auth.py  test_controllers.py  test_database.py  test_main.py  test_model.py  test_routes.py  test_services.py  test_xml.py
